📝 add seller, wallet to apispec
